Add hover effect to buttons

--- a/html/static/styles/plugin-center.css
+++ b/html/static/styles/plugin-center.css
@@ -153,9 +153,17 @@ main {
   color: white;
 }
 
+.primary:hover {
+  background-color: #00a7b2;
+}
+
 .warning {
-  background-color: #ffcf13;
+  background-color: #ffd635;
   color: #88550D;
+}
+
+.warning:hover {
+  background-color: #ffcf13;
 }
 
 .error-icon {
