--- a/html/layout.gohtml
+++ b/html/layout.gohtml
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/static/styles/plugin-center.css" />
+  <link rel="shortcut icon" href="/static/favicon.ico" />
   <title>SCM-Manager Plugin Center</title>
 </head>
 <body>
@@ -14,6 +15,10 @@
     {{block "content" .}}{{end}}
   </div>
 </main>
+
+<a class="imprint" target="_blank" href="https://scm-manager.org/imprint">
+  Imprint & Privacy
+</a>
 
 </body>
 </html>
