Add data processing link to footer

--- a/html/layout.gohtml
+++ b/html/layout.gohtml
@@ -16,9 +16,14 @@
   </div>
 </main>
 
-<a class="imprint" target="_blank" href="https://scm-manager.org/imprint">
-  Imprint & Privacy
-</a>
+<div class="imprint">
+  <a target="_blank" href="https://scm-manager.org/data-processing">
+    Data Processing
+  </a>
+  <a target="_blank" href="https://scm-manager.org/imprint">
+    Imprint &amp; Privacy
+  </a>
+</div>
 
 </body>
 </html>
